testsuite/tests/properties/invalid_bind/bad_return_type.lkt
import common

class BazNode: FooNode {
    fun conv_prop(): Int = 12
}
